--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
       <section id="works">
         <h2 class="style-h2">Works</h2>
         <div id="works-contents">
-          <div id="works1">
+          <div class="works-content">
             <img src="image/works1.png" alt="海の写真">
             <p>新潟に訪れた際に、日本海の雄大さに魅了された撮影した1枚</p>
           </div>
-          <div id="works2">
+          <div class="works-content">
             <img src="image/works2.png" alt="山の写真">
             <p>地元長野の木曽町から撮影した、冠雪した御嶽山</p>
           </div>
-          <div id="works3">
+          <div class="works-content">
             <img src="image/works3.png" alt="古い町並みの写真">
             <p>京都で撮影した、明け方の古き良き日本の街並み</p>
           </div>
         </div>
       </section>
       <footer>
-        <p id="copyright">&copy;MyProfile.All rights reserved.</p>
+        <p id="copyright">&copy;MyProfile. All rights reserved.</p>
       </footer>
     </article>
   </main>
